Add colors to progress bars

--- a/resources/views/_layouts/global.twig
+++ b/resources/views/_layouts/global.twig
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Tracker</title>
-	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+	<link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/flatly/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 	{% include '_partials/navigation.twig' %}
