--- a/resources/views/tracks/index.twig
+++ b/resources/views/tracks/index.twig
@@ -2,7 +2,7 @@
 {% from '_macros/table.twig' import progress %}
 
 {% block content %}
-	<table class="table">
+	<table class="table table-striped table-hover">
 		<thead>
 		<tr>
 			<th>Artist</th>
