--- a/resources/views/_layouts/global.twig
+++ b/resources/views/_layouts/global.twig
@@ -4,6 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Tracker</title>
 	<link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/flatly/bootstrap.min.css" rel="stylesheet">
+	<style type="text/css">
+		.container {
+			width: 75%;
+		}
+	</style>
 </head>
 <body>
 	{% include '_partials/navigation.twig' %}
