--- a/resources/views/_macros/table.twig
+++ b/resources/views/_macros/table.twig
@@ -7,3 +7,7 @@
 		</div>
 	</div>
 {% endmacro %}
+
+{% macro boolean(boolean) %}
+	{{ boolean ? '<i class="glyphicon glyphicon-ok"></i>' : '<i class="glyphicon glyphicon-remove"></i>' }}
+{% endmacro %}
