--- a/resources/views/tracks/index.twig
+++ b/resources/views/tracks/index.twig
@@ -1,5 +1,5 @@
 {% extends '_layouts/global.twig' %}
-{% from '_macros/table.twig' import progress %}
+{% from '_macros/table.twig' import progress, boolean %}
 
 {% block content %}
 	<table class="table table-striped table-hover">
@@ -8,6 +8,9 @@
 			<th>Artist</th>
 			<th>Title</th>
 			<th>Tracker</th>
+			<th>Tuning</th>
+			<th>DD</th>
+			<th>Live</th>
 			<th>Tone</th>
 			<th>Track</th>
 			<th>Tab</th>
@@ -20,6 +23,9 @@
 				<td>{{ track.artist }}</td>
 				<td>{{ track.name }}</td>
 				<td>{{ track.tracker.name }}</td>
+				<td>{{ track.tuning }}</td>
+				<td>{{ boolean(track.dd) }}</td>
+				<td>{{ boolean(track.live) }}</td>
 				<td>
 					{{ progress(track.tone, 3) }}
 				</td>
