Work on ratings

--- a/resources/views/_layouts/global.twig
+++ b/resources/views/_layouts/global.twig
@@ -6,7 +6,11 @@
 	<link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/flatly/bootstrap.min.css" rel="stylesheet">
 	<style type="text/css">
 		.container {
-			width: 75%;
+			width: 85%;
+		}
+		.label[disabled] {
+			opacity: 0.25;
+			background-color: #AAA;
 		}
 	</style>
 </head>
