--- a/resources/views/_layouts/global.twig
+++ b/resources/views/_layouts/global.twig
@@ -24,6 +24,21 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.21.5/js/jquery.tablesorter.combined.min.js"></script>
 	<script>
+		$.tablesorter.addParser({
+			id: 'boolean',
+			is: function (text, table, cell) {
+				return cell.getElementsByClassName('glyphicon').length;
+			},
+			format: function (text, table, cell) {
+				var icon = cell.getElementsByClassName('glyphicon')[0];
+
+				return icon.classList.contains('glyphicon-ok');
+
+			},
+			parsed: false,
+			type: 'numeric',
+		});
+
 		$('table').tablesorter();
 	</script>
 </body>
