Highlight best tracks

--- a/resources/views/_layouts/global.twig
+++ b/resources/views/_layouts/global.twig
@@ -12,6 +12,10 @@
 			opacity: 0.25;
 			background-color: #AAA;
 		}
+		.table .success td {
+			background-color: hsla(168, 77%, 41%, 0.1) !important;
+			color: black;
+		}
 	</style>
 </head>
 <body>
