--- a/resources/views/tracks/index.twig
+++ b/resources/views/tracks/index.twig
@@ -25,7 +25,7 @@
 		</thead>
 		<tbody>
 		{% for track in tracks %}
-			<tr {% if not track.playable %}class="danger"{% endif %}>
+			<tr class="{% if not track.playable %}danger{% endif %} {% if track.rating >= 16 %}success{% endif %}">
 				<td>{{ track.artist }}</td>
 				<td>{{ track.name }}</td>
 				<td>{{ track.tracker.name }}</td>
