--- a/resources/views/_layouts/global.twig
+++ b/resources/views/_layouts/global.twig
@@ -5,7 +5,7 @@
 	<title>Tracker</title>
 	<link rel="stylesheet" href="/builds/css/styles.css" />
 </head>
-<body>
+<body ng-app="notetracker" ng-controller="AppController">
 	{% include '_partials/navigation.twig' %}
 
 	<main class="container">
