--- a/resources/views/trackers/index.twig
+++ b/resources/views/trackers/index.twig
@@ -2,7 +2,7 @@
 {% from '_macros/table.twig' import progress %}
 
 {% block content %}
-	<table class="table table-striped table-hover">
+	<table class="table table-striped table-hover" tablesorter>
 		<thead>
 		<tr>
 			<th>Tracker</th>
