--- a/resources/views/tracks/index.twig
+++ b/resources/views/tracks/index.twig
@@ -2,7 +2,7 @@
 {% from '_macros/table.twig' import progress, boolean %}
 
 {% block content %}
-	<table class="table table-striped table-hover">
+	<table class="table table-striped table-hover" tablesorter>
 		<thead>
 		<tr>
 			<th>Artist</th>
@@ -23,6 +23,8 @@
 			<th>Track</th>
 			<th>Tab</th>
 			<th>Rating</th>
+			<th>Edit</th>
+			<th>Delete</th>
 		</tr>
 		</thead>
 		<tbody>
@@ -59,8 +61,21 @@
 				<td>
 					{{ progress(track.rating, rating_scale) }}
 				</td>
+				<td class="text-center">
+					<a href="#"><i class="glyphicon glyphicon-edit"></i></a>
+				</td>
+				<td class="text-center">
+					<a href="#"><i class="glyphicon glyphicon-remove"></i></a>
+				</td>
 			</tr>
 		{% endfor %}
 		</tbody>
+		<tfoot>
+			<tr>
+				<td colspan="50">
+					{% include '_partials/add.twig' %}
+				</td>
+			</tr>
+		</tfoot>
 	</table>
 {% endblock %}
