--- a/resources/views/tracks/index.twig
+++ b/resources/views/tracks/index.twig
@@ -1,6 +1,7 @@
 {% extends '_layouts/global.twig' %}
 {% from '_macros/table.twig' import progress, boolean %}
 {% set title = 'Tracks' %}
+{% set body_classes = 'container--wide' %}
 
 {% block content %}
 	<table class="table table-striped table-hover" tablesorter>
