--- a/resources/views/_partials/navigation.twig
+++ b/resources/views/_partials/navigation.twig
@@ -12,6 +12,9 @@
 				<li {% if Route.currentRouteNamed('trackers.index') %}class="active"{% endif %}>
 					<a href="{{ URL.route('trackers.index') }}">Blacksmiths</a>
 				</li>
+				<li>
+					<a href="#" class="btn btn-success">Rate a track</a>
+				</li>
 			</ul>
 
 			<ul class="nav navbar-nav navbar-right">
