--- a/resources/assets/sass/styles.scss
+++ b/resources/assets/sass/styles.scss
@@ -1,7 +1,9 @@
 @import 'utils/variables';
 @import 'utils/functions';
 
+@import 'layout/navigation';
 @import 'layout/container';
 
+@import 'components/buttons';
 @import 'components/table';
 @import 'components/forms';
