Work on ratings

--- a/resources/assets/sass/components/_forms.scss
+++ b/resources/assets/sass/components/_forms.scss
@@ -1,7 +1,8 @@
 legend {
-	font-size: 3rem;
+	font-size: 2rem;
+	text-align: center;
+	background: $color-gray;
+	padding: 0.5em;
+	color: darken($color-gray, 15);
 }
 
-select option[disabled] {
-	color: grey(80);
-}
