--- a/resources/assets/sass/utils/_variables.scss
+++ b/resources/assets/sass/utils/_variables.scss
@@ -1,1 +1,77 @@
-$color-green: hsl(168, 77%, 41%);
+// Swatches
+//////////////////////////////////////////////////////////////////////
+
+// +-------------------------------------------------------------------------+
+// | Flat UI                                                                 |
+// +-------------------------------------------------------------------------+
+
+// Greens
+$flat-turquoise: #1ABC9C;
+$flat-green-sea: #16A085;
+$flat-emerald: #2ECC71;
+$flat-nephritis: #27AE60;
+
+// Blues
+$flat-peter-river: #3498DB;
+$flat-belize-hole: #2980B9;
+$flat-wet-asphalt: #34495E;
+$flat-midnight-blue: #2C3E50;
+
+// Purples
+$flat-amethyst: #9B59B6;
+$flat-wisteria: #8E44AD;
+
+// Yellows
+$flat-sunflower: #F1C40F;
+
+// Oranges
+$flat-orange: #F39C12;
+$flat-carrot: #E67E22;
+$flat-pumpkin: #D35400;
+
+// Reds
+$flat-alizarin: #E74C3C;
+$flat-pomegranate: #C0392B;
+
+// Grays
+$flat-clouds: #ECF0F1;
+$flat-silver: #BDC3C7;
+$flat-concrete: #95A5A6;
+$flat-asbestos: #7F8C8D;
+
+// Colors
+//////////////////////////////////////////////////////////////////////
+
+// Greens
+$color-green: $flat-turquoise;
+$color-green-2: $flat-green-sea;
+$color-green-3: $flat-emerald;
+$color-green-4: $flat-nephritis;
+
+// Blues
+$color-blue: $flat-peter-river;
+$color-blue-2: $flat-belize-hole;
+$color-blue-3: $flat-wet-asphalt;
+$color-blue-4: $flat-midnight-blue;
+
+// Purples
+$color-purple: $flat-amethyst;
+$color-purple-2: $flat-wisteria;
+
+// Yellows
+$color-yellow: $flat-sunflower;
+
+// Oranges
+$color-orange: $flat-orange;
+$color-orange-2: $flat-carrot;
+$color-orange-3: $flat-pumpkin;
+
+// Refs
+$color-red: $flat-alizarin;
+$color-red-2: $flat-pomegranate;
+
+// Grays
+$color-gray: $flat-clouds;
+$color-gray-2: $flat-silver;
+$color-gray-3: $flat-concrete;
+$color-gray-4: $flat-asbestos;
