--- a/resources/views/_partials/navigation.twig
+++ b/resources/views/_partials/navigation.twig
@@ -13,7 +13,7 @@
 					<a href="{{ URL.route('trackers.index') }}">Blacksmiths</a>
 				</li>
 				<li>
-					<a href="#" class="btn btn-success">Rate a track</a>
+					<a href="{{ URL.route('ratings.create') }}" class="btn btn-success">Rate a track</a>
 				</li>
 			</ul>
 
