--- a/resources/views/tracks/index.twig
+++ b/resources/views/tracks/index.twig
@@ -51,7 +51,7 @@
 					{{ progress(track.ratings.average('tone'), 3) }}
 				</td>
 				<td>
-					{{ progress(track.ratings.average('track'), 3) }}
+					{{ progress(track.ratings.average('audio'), 3) }}
 				</td>
 				<td>
 					{{ progress(track.ratings.average('tab'), 3) }}
