--- a/resources/views/_partials/navigation.twig
+++ b/resources/views/_partials/navigation.twig
@@ -22,6 +22,7 @@
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ current_user.name }} <span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
+							<li><a href="{{ URL.route('ratings.index') }}">My ratings</a></li>
 							<li><a href="{{ URL.route('auth.logout') }}">Logout</a></li>
 						</ul>
 					</li>
