--- a/resources/views/trackers/index.twig
+++ b/resources/views/trackers/index.twig
@@ -10,7 +10,7 @@
 			<th>Tracker</th>
 			<th>Artists</th>
 			<th>Tone</th>
-			<th>Track</th>
+			<th>Audio</th>
 			<th>Tab</th>
 			<th>Rating</th>
 			<th>Tracks</th>
@@ -22,7 +22,7 @@
 				<td><a target="_blank" href='http://ignition.customsforge.com/search/browse?filters={"member":"{{ tracker.name }}"}&group=artist'>{{ tracker.name }}</a></td>
 				<td>{{ tracker.artists|join(', ') }}</td>
 				<td>{{ progress(tracker.tracks.average('tone'), 3) }}</td>
-				<td>{{ progress(tracker.tracks.average('track'), 3) }}</td>
+				<td>{{ progress(tracker.tracks.average('audio'), 3) }}</td>
 				<td>{{ progress(tracker.tracks.average('tab'), 3) }}</td>
 				<td>{{ progress(tracker.rating, trackers.max('rating')) }}</td>
 				<td>{{ tracker.tracks.count() }}</td>
