--- a/resources/assets/sass/styles.scss
+++ b/resources/assets/sass/styles.scss
@@ -1,6 +1,8 @@
 @import 'utils/variables';
 @import 'utils/functions';
 
+@import 'base/images';
+
 @import 'layout/navigation';
 @import 'layout/container';
 
