--- a/resources/views/ratings/edit.twig
+++ b/resources/views/ratings/edit.twig
@@ -6,11 +6,11 @@
 {% block content %}
 	{% autoescape false %}
 		{{ Former.open().route(endpoint, rating.id).populate(rating) }}
-			<fieldset>
-				<legend>CDLC</legend>
-				{{ Former.select('track_id', 'CDLC').options(tracks).setAttribute('selectize', '').help('If you can\t find the one you want here, fill the field below') }}
-				{{ Former.text('ignition_id', 'Track #').help('<a target="_blank" href="#">Where can I find this?</a>') }}
-			</fieldset>
+		<fieldset>
+			<legend>CDLC</legend>
+			{{ Former.select('track_id', 'CDLC').options(tracks).setAttribute('selectize', '').help('If you can\t find the one you want here, fill the field below') }}
+			{{ Former.text('ignition_id', 'Track #').help("<a target=\"_blank\" href=\"#{URL.route('help.identifier')}\">Where can I find this?</a>") }}
+		</fieldset>
 
 		<fieldset>
 			<legend>Experience</legend>
