Add some tooltips

--- a/resources/views/tracks/index.twig
+++ b/resources/views/tracks/index.twig
@@ -9,14 +9,14 @@
 		<tr>
 			<th>Artist</th>
 			<th>Title</th>
-			<th>Tracker</th>
+			<th>Blacksmith</th>
 			<th>Tuning</th>
 			<th>Parts</th>
-			<th>DD</th>
-			<th>RR</th>
-			<th>Levels</th>
+			<th><abbr title="Dynamic Difficuly">DD</abbr></th>
+			<th><abbr title="Riff Repeater">RR</abbr></th>
+			<th><abbr title="Number of difficulty levels">Levels</abbr></th>
 			<th>Volume</th>
-			<th>Silence</th>
+			<th>Pre-silence</th>
 			<th>Playable</th>
 			<th>Version</th>
 			<th>Last update</th>
