Work on about page

--- a/resources/views/help/about.twig
+++ b/resources/views/help/about.twig
@@ -6,5 +6,11 @@
 		<h1>{{ title }}</h1>
 	</header>
 
-	<p>Furnace is made by </p>
+	<p>
+		Furnace is made by <strong>Maxime Fabre</strong>. Data for the various tracks is grabbed from <a href="http://ignition.customsforge.com/" target="_blank">Ignition</a> – this just builds upon their already amazing work.
+	</p>
+
+	<p>
+		Sources can be found <a href="https://github.com/Anahkiasen/furnace" target="_blank">here</a>. All bug reports and feature requests should be made there.
+	</p>
 {% endblock %}
