--- a/resources/views/_layouts/global.twig
+++ b/resources/views/_layouts/global.twig
@@ -12,6 +12,10 @@
 		{% block content %}{% endblock %}
 	</main>
 
+	<footer class="layout-footer">
+		&copy;{{ "now"|date('Y') }} - Maxime Fabre - <a href="https://github.com/Anahkiasen/furnace">View sources</a>
+	</footer>
+
 	<script src="{{ URL.asset('builds/js/scripts.js') }}"></script>
 </body>
 </html>
