--- a/resources/views/trackers/index.twig
+++ b/resources/views/trackers/index.twig
@@ -17,7 +17,7 @@
 		{% for tracker in trackers %}
 			<tr>
 				<td><a target="_blank" href='http://ignition.customsforge.com/search/browse?filters={"member":"{{ tracker.name }}"}&group=artist'>{{ tracker.name }}</a></td>
-				<td>{{ tracker.artists|join(', ') }}</td>
+				<td>{{ tracker.artists|join(', ')|raw }}</td>
 				<td>{{ progress(tracker.rating, trackers.max('rating')) }}</td>
 				<td>{{ tracker.tracks.count() }}</td>
 			</tr>
