--- a/resources/assets/sass/layout/_navigation.scss
+++ b/resources/assets/sass/layout/_navigation.scss
@@ -1,8 +1,11 @@
 .navbar-default {
 	border-radius: 0;
 
-	.navbar-nav {
+	.navbar-brand em {
+		opacity: 0.55;
+	}
 
+	.navbar-nav {
 		> li {
 			> .cta {
 				background: $color-green;
