--- a/resources/views/_partials/navigation.twig
+++ b/resources/views/_partials/navigation.twig
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
 	<div class="container-fluid">
 		<div class="navbar-header">
-			<a class="navbar-brand">Furnace</a>
+			<a class="navbar-brand">Furnace <em>&alpha;lpha</em></a>
 		</div>
 
 		<div class="collapse navbar-collapse">
