Work on tracks.show

--- a/resources/assets/sass/styles.scss
+++ b/resources/assets/sass/styles.scss
@@ -6,6 +6,7 @@
 @import 'components/buttons';
 @import 'components/table';
 @import 'components/forms';
+@import 'components/rating';
 
 @import 'layout/navigation';
 @import 'layout/container';
