--- a/resources/views/_partials/navigation.twig
+++ b/resources/views/_partials/navigation.twig
@@ -23,8 +23,7 @@
 						</ul>
 					</li>
 				{% else %}
-					<li><a href="{{ URL.route('auth.login') }}">Login</a></li>
-					<li><a href="{{ URL.route('users.create') }}">Signup</a></li>
+					<li><a href="{{ URL.route('users.create') }}">Login / Signup</a></li>
 				{% endif %}
 			</ul>
 		</div>
