--- a/resources/assets/sass/components/_buttons.scss
+++ b/resources/assets/sass/components/_buttons.scss
@@ -1,3 +1,14 @@
 .btn {
 	transition: background 0.3s;
 }
+
+@each $provider, $color in $providers {
+	.btn-#{$provider} {
+		background: $color;
+		color: white;
+
+		&:hover {
+			background: lighten($color, 10);
+		}
+	}
+}
